--- a/Game.ui
+++ b/Game.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(0, 255, 255);</string>
+  </property>
   <widget class="QGroupBox" name="main_window_of_app">
    <property name="geometry">
     <rect>
@@ -21,6 +24,9 @@
      <width>1141</width>
      <height>471</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);</string>
    </property>
    <property name="title">
     <string/>
@@ -63,6 +69,9 @@
       <height>391</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="title">
      <string/>
     </property>
@@ -85,7 +94,8 @@
          <bool>false</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">font: 75 12pt &quot;Comic Sans MS&quot;;</string>
+         <string notr="true">font: 75 12pt &quot;Comic Sans MS&quot;;
+background-color: rgb(255, 255, 0);</string>
         </property>
         <property name="text">
          <string>Угадать</string>
@@ -204,11 +214,15 @@
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 12pt &quot;Comic Sans MS&quot;;</string>
+      <string notr="true">font: 12pt &quot;Comic Sans MS&quot;;
+selection-background-color: rgb(85, 255, 255);</string>
      </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
+     <attribute name="horizontalHeaderMinimumSectionSize">
+      <number>92</number>
+     </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>92</number>
      </attribute>
@@ -334,6 +348,9 @@
        <height>31</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 0);</string>
+     </property>
      <property name="text">
       <string>Начать игру</string>
      </property>
@@ -346,6 +363,9 @@
        <width>291</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 0);</string>
      </property>
      <property name="text">
       <string>Завершить игру</string>
@@ -364,6 +384,40 @@
       <string>1, 2, 3, 4</string>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="history_btn">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>340</y>
+      <width>291</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 0);
+font: 12pt &quot;Comic Sans MS&quot;;</string>
+    </property>
+    <property name="text">
+     <string>История фермера</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="how_to_play_btn">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>400</y>
+      <width>291</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 0);
+font: 12pt &quot;Comic Sans MS&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Забыл как играть?</string>
+    </property>
    </widget>
   </widget>
  </widget>
