--- a/Game.ui
+++ b/Game.ui
@@ -21,7 +21,7 @@
     <rect>
      <x>10</x>
      <y>20</y>
-     <width>1141</width>
+     <width>1151</width>
      <height>471</height>
     </rect>
    </property>
@@ -66,7 +66,7 @@
       <x>10</x>
       <y>70</y>
       <width>451</width>
-      <height>391</height>
+      <height>381</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -197,7 +197,7 @@ background-color: rgb(255, 255, 0);</string>
      <rect>
       <x>800</x>
       <y>10</y>
-      <width>331</width>
+      <width>341</width>
       <height>441</height>
      </rect>
     </property>
@@ -215,7 +215,7 @@ background-color: rgb(255, 255, 0);</string>
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>311</width>
+       <width>321</width>
        <height>411</height>
       </rect>
      </property>
@@ -257,7 +257,7 @@ background-color: rgb(255, 255, 0);</string>
       <x>480</x>
       <y>30</y>
       <width>311</width>
-      <height>291</height>
+      <height>301</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -303,7 +303,7 @@ background-color: rgb(255, 255, 0);</string>
      <property name="geometry">
       <rect>
        <x>130</x>
-       <y>150</y>
+       <y>140</y>
        <width>51</width>
        <height>16</height>
       </rect>
@@ -316,7 +316,7 @@ background-color: rgb(255, 255, 0);</string>
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>150</y>
+       <y>140</y>
        <width>101</width>
        <height>16</height>
       </rect>
@@ -348,13 +348,14 @@ background-color: rgb(255, 255, 0);</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>190</y>
+       <y>170</y>
        <width>291</width>
-       <height>31</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 0);</string>
+      <string notr="true">background-color: rgb(255, 255, 0);
+font: 16pt &quot;Comic Sans MS&quot;;</string>
      </property>
      <property name="text">
       <string>Начать игру</string>
@@ -366,11 +367,12 @@ background-color: rgb(255, 255, 0);</string>
        <x>10</x>
        <y>240</y>
        <width>291</width>
-       <height>31</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 0);</string>
+      <string notr="true">background-color: rgb(255, 255, 0);
+font: 16pt &quot;Comic Sans MS&quot;;</string>
      </property>
      <property name="text">
       <string>Завершить игру</string>
@@ -401,7 +403,7 @@ background-color: rgb(255, 255, 0);</string>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 0);
-font: 12pt &quot;Comic Sans MS&quot;;</string>
+font: 16pt &quot;Comic Sans MS&quot;;</string>
     </property>
     <property name="text">
      <string>История фермера</string>
@@ -411,21 +413,21 @@ font: 12pt &quot;Comic Sans MS&quot;;</string>
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>400</y>
+      <y>410</y>
       <width>291</width>
       <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 0);
-font: 12pt &quot;Comic Sans MS&quot;;</string>
+font: 16pt &quot;Comic Sans MS&quot;;</string>
     </property>
     <property name="text">
      <string>Забыл как играть?</string>
     </property>
    </widget>
-   <zorder>screen_of_game</zorder>
    <zorder>win_img</zorder>
+   <zorder>screen_of_game</zorder>
    <zorder>action_label</zorder>
    <zorder>groupBox_3</zorder>
    <zorder>groupBox_4</zorder>
