--- a/ui/Game.ui
+++ b/ui/Game.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1167</width>
+    <width>1200</width>
     <height>637</height>
    </rect>
   </property>
@@ -21,7 +21,7 @@
     <rect>
      <x>10</x>
      <y>20</y>
-     <width>1151</width>
+     <width>1161</width>
      <height>471</height>
     </rect>
    </property>
@@ -197,7 +197,7 @@ background-color: rgb(255, 255, 0);</string>
      <rect>
       <x>800</x>
       <y>10</y>
-      <width>341</width>
+      <width>351</width>
       <height>441</height>
      </rect>
     </property>
@@ -215,15 +215,33 @@ background-color: rgb(255, 255, 0);</string>
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>321</width>
+       <width>331</width>
        <height>411</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font: 12pt &quot;Comic Sans MS&quot;;</string>
      </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+     <property name="autoScroll">
+      <bool>true</bool>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="tabKeyNavigation">
+      <bool>false</bool>
+     </property>
+     <property name="dragEnabled">
+      <bool>true</bool>
+     </property>
+     <property name="defaultDropAction">
+      <enum>Qt::IgnoreAction</enum>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>false</bool>
      </property>
      <attribute name="horizontalHeaderMinimumSectionSize">
       <number>92</number>
