--- a/ui/App.ui
+++ b/ui/App.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Bulls and Cows</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
